crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_bytes_cold.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
case@Bool true of
  True -> (con bytestring #68656c6c6f)
  False -> unBData (bData (trace "cold" in (con bytestring #68656c6c6f)))
--- unoptimized UPLC
(program 1.1.0
  (case
    (con bool True)
    [(builtin unBData)
      [(builtin bData)
        (force
          [[(force (builtin trace)) (con string "cold")]
            (delay (con bytestring #68656c6c6f))])]]
    (con bytestring #68656c6c6f)))
--- optimized Core
(con bytestring #68656c6c6f)
--- optimized UPLC
(program 1.1.0 (con bytestring #68656c6c6f))
--- isolated pass
--- core before
case@Bool true of
  True -> (con bytestring #68656c6c6f)
  False -> unBData (bData (trace "cold" in (con bytestring #68656c6c6f)))
--- uplc before
(program 1.1.0
  (case
    (con bool True)
    [(builtin unBData)
      [(builtin bData)
        (force
          [[(force (builtin trace)) (con string "cold")]
            (delay (con bytestring #68656c6c6f))])]]
    (con bytestring #68656c6c6f)))
--- core after
case@Bool true of
  True -> (con bytestring #68656c6c6f)
  False -> trace "cold" in (con bytestring #68656c6c6f)
--- uplc after
(program 1.1.0
  (case
    (con bool True)
    (force
      [[(force (builtin trace)) (con string "cold")]
        (delay (con bytestring #68656c6c6f))])
    (con bytestring #68656c6c6f)))
--- result
(con bytestring #68656c6c6f)
--- logs
[]
