crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_bytes_oversaturated.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
unBData (bData (con bytestring #68656c6c6f)) 1
--- unoptimized UPLC
(program 1.1.0
  [[(builtin unBData) [(builtin bData) (con bytestring #68656c6c6f)]]
    (con integer 1)])
--- optimized Core
(con bytestring #68656c6c6f) 1
--- optimized UPLC
(program 1.1.0 [(con bytestring #68656c6c6f) (con integer 1)])
--- isolated pass
--- core before
unBData (bData (con bytestring #68656c6c6f)) 1
--- uplc before
(program 1.1.0
  [[(builtin unBData) [(builtin bData) (con bytestring #68656c6c6f)]]
    (con integer 1)])
--- core after
(con bytestring #68656c6c6f) 1
--- uplc after
(program 1.1.0 [(con bytestring #68656c6c6f) (con integer 1)])
--- result
error: NonFunctionApplication(Con(Integer(1)), Con(ByteString([104, 101, 108, 108, 111])))
--- logs
[]
