crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_bytes_reverse.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
bData (unBData (con data (B #68656c6c6f)))
--- unoptimized UPLC
(program 1.1.0 [(builtin bData) [(builtin unBData) (con data (B #68656c6c6f))]])
--- optimized Core
let anf#1 : bytes = unBData (con data (B #68656c6c6f)) in
bData anf#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_2 [(builtin bData) anf_2])
    [(builtin unBData) (con data (B #68656c6c6f))]])
--- isolated pass
--- core before
bData (unBData (con data (B #68656c6c6f)))
--- uplc before
(program 1.1.0 [(builtin bData) [(builtin unBData) (con data (B #68656c6c6f))]])
--- core after
(con data (B #68656c6c6f))
--- uplc after
(program 1.1.0 (con data (B #68656c6c6f)))
--- result
(con data (B #68656c6c6f))
--- logs
[]
