crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_bytes_trace.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
unBData (bData (trace "operand" in (con bytestring #68656c6c6f)))
--- unoptimized UPLC
(program 1.1.0
  [(builtin unBData)
    [(builtin bData)
      (force
        [[(force (builtin trace)) (con string "operand")]
          (delay (con bytestring #68656c6c6f))])]])
--- optimized Core
let anf#1 : bytes = trace "operand" in (con bytestring #68656c6c6f) in
let anf#2 : Data = bData anf#1 in
anf#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam anf_3 [(lam anf_4 anf_3) [(builtin bData) anf_3]])
      (force
        [[builtin_5 (con string "operand")] (delay (con bytestring #68656c6c6f))])])
    (force (builtin trace))])
--- isolated pass
--- core before
unBData (bData (trace "operand" in (con bytestring #68656c6c6f)))
--- uplc before
(program 1.1.0
  [(builtin unBData)
    [(builtin bData)
      (force
        [[(force (builtin trace)) (con string "operand")]
          (delay (con bytestring #68656c6c6f))])]])
--- core after
trace "operand" in (con bytestring #68656c6c6f)
--- uplc after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "operand")]
      (delay (con bytestring #68656c6c6f))]))
--- result
(con bytestring #68656c6c6f)
--- logs
["operand"]
