crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_bytes_wrong_kind.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
unBData (bData false)
--- unoptimized UPLC
(program 1.1.0 [(builtin unBData) [(builtin bData) (con bool False)]])
--- optimized Core
let anf#1 : Data = bData false in
unBData anf#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_2 [(builtin unBData) anf_2]) [(builtin bData) (con bool False)]])
--- isolated pass
--- core before
unBData (bData false)
--- uplc before
(program 1.1.0 [(builtin unBData) [(builtin bData) (con bool False)]])
--- core after
unBData (bData false)
--- uplc after
(program 1.1.0 [(builtin unBData) [(builtin bData) (con bool False)]])
--- result
error: Runtime(TypeMismatch(ByteString, Boolean(false)))
--- logs
[]
